--- a/Nova.html
+++ b/Nova.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project3</title>
+    <title>Nova</title>
     <link rel="stylesheet" type="text/css" href="pro3/style.css">
     <!-- cdn font awesome -->
     <!-- <script src="https://kit.fontawesome.com/2b90b5a66a.js" crossorigin="anonymous"></script> -->
